Issue #22218: Fix "comparison between signed and unsigned integers" warnings in socketmodule.c.